Fixed large margin on sides of feature article on smaller screens, now feature image appears full width

--- a/assets/css/3-sections/_feature.sass
+++ b/assets/css/3-sections/_feature.sass
@@ -1,6 +1,10 @@
 #feature
     margin: 0 75px
 
+    @media (max-width: 900px)
+        margin: 0
+        text-align: center
+
     #main
         margin: 15px 0
 
